UI fix - Too short messages

--- a/resources/assets/scss/components/_volgende-activiteit.scss
+++ b/resources/assets/scss/components/_volgende-activiteit.scss
@@ -19,7 +19,7 @@
                 }
 
                 &__info {
-                    max-height: spacing(xxl);
+                    max-height: spacing(xxxl);
                     height: auto;
                     margin-bottom: spacing(sm);
                 }
